_build/CrispASR/bindings/java/src/main/java/io/github/ggerganov/whispercpp/CrispasrSession.java

package io.github.ggerganov.whispercpp;

import com.sun.jna.Callback;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.Pointer;
import com.sun.jna.ptr.DoubleByReference;
import com.sun.jna.ptr.IntByReference;
import com.sun.jna.ptr.LongByReference;
import com.sun.jna.ptr.PointerByReference;

/**
 * Minimal TTS surface for the Java binding. Exposes the unified
 * CrispASR Session API for TTS-capable backends (kokoro, vibevoice,
 * qwen3-tts, orpheus) plus the kokoro per-language model + voice
 * resolver (PLAN #56 opt 2b).
 *
 * <p>Usage:
 * <pre>{@code
 * CrispasrSession.Resolved r = CrispasrSession.kokoroResolveForLang(
 *     "/models/kokoro-82m-q8_0.gguf", "de");
 * try (CrispasrSession s = CrispasrSession.open(r.modelPath, 4)) {
 *     if (r.voicePath != null) s.setVoice(r.voicePath, null);
 *     float[] pcm = s.synthesize("Guten Tag");
 *     // ... write WAV ...
 * }
 * }</pre>
 */
public final class CrispasrSession implements AutoCloseable {

    public interface Lib extends Library {
        Lib INSTANCE = Native.load("crispasr", Lib.class);

        Pointer crispasr_session_open(String modelPath, int nThreads);
        void    crispasr_session_close(Pointer session);
        int     crispasr_session_set_codec_path(Pointer session, String path);
        int     crispasr_session_set_voice(Pointer session, String path, String refTextOrNull);
        int     crispasr_session_set_speaker_name(Pointer session, String name);
        int     crispasr_session_set_speaker_id(Pointer session, int id);
        int     crispasr_session_set_punc_model(Pointer session, String puncModel);
        int     crispasr_session_set_hotwords(Pointer session, String hotwords, float boost);
        int     crispasr_session_set_sensitivity(Pointer session, String preset);
        int     crispasr_session_set_g2p_dict(Pointer session, String source);
        int     crispasr_session_n_speakers(Pointer session);
        String  crispasr_session_get_speaker_name(Pointer session, int i);
        int     crispasr_session_set_instruct(Pointer session, String instruct);
        // #316: synthesize these phonemes verbatim, skipping the G2P. Empty clears. kokoro and piper only (rc=-2 otherwise).
        int          crispasr_session_set_tts_phonemes(Pointer session, String phonemes);
        void         crispasr_session_set_tts_pad_silence_ms(Pointer session, int ms);
        int     crispasr_session_is_custom_voice(Pointer session);
        int     crispasr_session_is_voice_design(Pointer session);
        Pointer crispasr_session_synthesize(Pointer session, String text, IntByReference outNSamples);
        // UNMARKED synthesis — refused unless crispasr_session_accept_marking_responsibility() was called first.
        Pointer crispasr_session_synthesize_raw(Pointer session, String text, IntByReference outNSamples);
        int     crispasr_session_accept_marking_responsibility(Pointer session, String attestation);
        // Whose voice a PRESET voice is (EU AI Act Art. 50(4)); -2 on a bad value.
        int     crispasr_session_set_speaker_identity(Pointer session, String identity);
        // Speech-to-speech (lfm2-audio, mini-omni2, sidon, voxcpm2-vae). outText receives the intermediate transcript.
        Pointer crispasr_session_speech_to_speech(Pointer session, float[] inSamples, int nInSamples,
                                                  PointerByReference outText, IntByReference outNSamples);
        int     crispasr_session_input_sample_rate(Pointer session);
        // #332: output-side counterparts (rate of synthesize/s2s PCM; mono channels).
        int     crispasr_session_output_sample_rate(Pointer session);
        int     crispasr_session_input_channels(Pointer session);
        int     crispasr_session_output_channels(Pointer session);
        void    crispasr_pcm_free(Pointer pcm);
        // AI-content marking (EU AI Act Art. 50(2)) — the other half of synthesize_raw.
        void    crispasr_watermark_embed(float[] pcm, int nSamples, float alpha);
        float   crispasr_watermark_detect(float[] pcm, int nSamples);
        int     crispasr_session_kokoro_clear_phoneme_cache(Pointer session);
        int     crispasr_session_set_source_language(Pointer session, String lang);
        int     crispasr_session_set_target_language(Pointer session, String lang);
        int     crispasr_session_set_tts_reference_language(Pointer session, String lang);
        int     crispasr_session_set_punctuation(Pointer session, int enable);
        int     crispasr_session_set_translate(Pointer session, int enable);
        int     crispasr_session_set_temperature(Pointer session, float temperature, long seed);
        int     crispasr_session_set_tts_seed(Pointer session, long seed);
        int     crispasr_session_set_max_new_tokens(Pointer session, int maxNewTokens);
        int     crispasr_session_set_frequency_penalty(Pointer session, float penalty);
        int     crispasr_session_set_tts_steps(Pointer session, int steps);
        int     crispasr_session_set_tts_num_candidates(Pointer session, int n);
        int     crispasr_session_set_top_p(Pointer session, float topP);
        int     crispasr_session_set_top_k(Pointer session, int topK);
        int     crispasr_session_set_do_sample(Pointer session, int enable);
        int     crispasr_session_set_min_p(Pointer session, float minP);
        int     crispasr_session_set_repetition_penalty(Pointer session, float r);
        int     crispasr_session_set_cfg_weight(Pointer session, float cfgWeight);
        int     crispasr_session_set_tts_noise_temp(Pointer session, float noiseTemp);
        int     crispasr_session_set_exaggeration(Pointer session, float exaggeration);
        int     crispasr_session_set_max_speech_tokens(Pointer session, int n);
        int     crispasr_session_set_min_speech_tokens(Pointer session, int n);
        int     crispasr_session_set_length_scale(Pointer session, float scale);
        int     crispasr_session_set_best_of(Pointer session, int n);
        int     crispasr_session_set_beam_size(Pointer session, int n);
        int     crispasr_session_set_return_logits(Pointer session, int enable);
        int     crispasr_session_set_grammar_text(Pointer session, String gbnfText, String rootRule, float penalty);
        int     crispasr_session_set_fallback_thresholds(Pointer session, float entropyThold,
                                                          float logprobThold, float noSpeechThold,
                                                          float temperatureInc);
        int     crispasr_session_set_alt_n(Pointer session, int n);
        int     crispasr_session_set_whisper_decode_extras(Pointer session, int suppressNst,
                                                            String suppressRegex, int carryInitialPrompt);
        int     crispasr_session_set_ask(Pointer session, String prompt);
        int     crispasr_session_detect_language(Pointer session, float[] pcm, int n_samples,
                                                  String lid_model_path, int method,
                                                  byte[] out_lang, int out_lang_cap, float[] out_prob);

        int crispasr_kokoro_resolve_model_for_lang_abi(
                String modelPath, String lang, byte[] outPath, int outPathLen);
        int crispasr_kokoro_resolve_fallback_voice_abi(
                String modelPath, String lang,
                byte[] outPath, int outPathLen,
                byte[] outPicked, int outPickedLen);

        // --- ASR transcription (PLAN #59) ---
        Pointer crispasr_session_transcribe(Pointer session, float[] pcm, int nSamples);
        Pointer crispasr_session_transcribe_lang(Pointer session, float[] pcm, int nSamples, String language);
        Pointer crispasr_session_transcribe_chunked_lang(Pointer session, float[] pcm, int nSamples,
                                                         int chunkSeconds, int overlapSeconds, String language);
        int     crispasr_get_progress();
        Pointer crispasr_session_transcribe_vad(Pointer session, float[] pcm, int nSamples,
                                                 int sampleRate, String vadModelPath, Pointer opts);
        int          crispasr_session_result_n_segments(Pointer result);
        String       crispasr_session_result_segment_text(Pointer result, int i);
        long         crispasr_session_result_segment_t0(Pointer result, int i);
        long         crispasr_session_result_segment_t1(Pointer result, int i);
        int          crispasr_session_result_n_words(Pointer result, int iSeg);
        String       crispasr_session_result_word_text(Pointer result, int iSeg, int iWord);
        long         crispasr_session_result_word_t0(Pointer result, int iSeg, int iWord);
        long         crispasr_session_result_word_t1(Pointer result, int iSeg, int iWord);
        float        crispasr_session_result_word_p(Pointer result, int iSeg, int iWord);
        float        crispasr_session_result_segment_no_speech_prob(Pointer result, int iSeg);
        // #300: native per-segment speaker label ("(Speaker N) "), or "" when the
        // backend does not diarize natively. Never NULL.
        String       crispasr_session_result_segment_speaker(Pointer result, int i);
        // Per-frame CTC logits (opted in via crispasr_session_set_return_logits)
        // for backends with a dense CTC grid (Omni CTC, wav2vec2/hubert/data2vec,
        // canary-ctc). _logits returns a const float* (frame-major;
        // logits[t * nVocab + v]) or NULL when none. Raw pre-softmax for Omni &
        // wav2vec2; log-probabilities for canary-ctc.
        int          crispasr_session_result_n_logit_frames(Pointer result);
        int          crispasr_session_result_n_logit_vocab(Pointer result);
        Pointer      crispasr_session_result_logits(Pointer result);
        void         crispasr_session_result_free(Pointer result);

        // --- Alignment (PLAN #59) ---
        Pointer crispasr_align_words_abi(String alignerModel, String transcript,
                                         float[] samples, int nSamples, long tOffsetCs, int nThreads);
        int    crispasr_align_result_n_words(Pointer result);
        String crispasr_align_result_word_text(Pointer result, int i);
        long   crispasr_align_result_word_t0(Pointer result, int i);
        long   crispasr_align_result_word_t1(Pointer result, int i);
        void   crispasr_align_result_free(Pointer result);

        // --- Standalone LID (PLAN #59) ---
        int crispasr_detect_language_pcm(float[] samples, int nSamples, int method,
                                         String modelPath, int nThreads, int useGpu,
                                         int gpuDevice, int flashAttn,
                                         byte[] outLang, int outLangCap, float[] outProb);

        // --- VAD (PLAN #59) ---
        int crispasr_vad_segments(String vadModelPath, float[] pcm, int nSamples,
                                  int sampleRate, float threshold, int minSpeechMs, int minSilenceMs,
                                  int nThreads, int useGpu, Pointer[] outSpans);
        void crispasr_vad_free(Pointer spans);

        // --- Punctuation (PLAN #59) ---
        Pointer crispasr_punc_init(String modelPath);
        String  crispasr_punc_process(Pointer ctx, String text);
        void    crispasr_punc_free_text(String text);
        void    crispasr_punc_free(Pointer ctx);
